# SimpleCAD

./: CMakeLists.txt  LICENSE  Readme.md
src/: BackgroundGrid.cpp  BackgroundGrid.h  CMakeLists.txt  Edge.h  Facet.h  MouseMarker.h  Quad.h  Simplex.h  SimplexContainer.h  Triangle.h  Vertex.h  WorldSpace.h  app_util.h  interactions.cpp  interactions.h  main.cpp  raylib_wrapper.h
